-Added CoverType Entity

--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -6,9 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": { //if the key name is not "ConnectionStrings", 
-    //the method builder.Configuration.GetConnectionString will not be able to catch it
+  "AllowedHosts": "*", //if the key name is not "ConnectionStrings", 
+  //the method builder.Configuration.GetConnectionString will not be able to catch it
+  "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BulkyDB;Trusted_Connection=True;"
   }
 }
